<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/postcard"
        android:layout_width="409dp"
        android:layout_height="300dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="1dp"
        android:layout_marginLeft="0dp"
        android:layout_alignParentLeft="true">

        <TextView
            android:id="@+id/bloodtypecard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="60dp"
            android:text="@string/bloodtype"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/statuscard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="100dp"
            android:text="@string/casestatus"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/numberofdonorscard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numberofdonors"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="140dp"
            android:textSize="24sp"
            />

        <TextView
            android:id="@+id/descriptioncard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="180dp"
            android:text="@string/descripriontxtaddpost"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/hospitalnamecard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="10dp"
            android:text="@string/hospitalnametxtcard"
            android:textSize="24sp" />

        <ImageButton
            android:id="@+id/plusonecardbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_plus1"
            android:layout_marginStart="350dp"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="250dp"
            tools:ignore="VectorDrawableCompat" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="240dp"/>

    </androidx.cardview.widget.CardView>
</RelativeLayout>