<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bdbg">


    <Spinner
        android:id="@+id/cityfilter"
        android:layout_width="254dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="156dp"
        android:layout_marginTop="342dp"
        android:layout_marginEnd="1dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="156dp"
        android:layout_marginRight="1dp" />

    <Spinner
        android:id="@+id/areafilter"
        android:layout_width="254dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="159dp"
        android:layout_marginTop="461dp"
        android:layout_marginEnd="-2dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="159dp"
        android:layout_marginRight="-2dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="243dp"
        android:layout_height="177dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="84dp"
        android:layout_marginLeft="84dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="540dp"
        app:srcCompat="@drawable/bdlogo" />

    <Spinner
        android:id="@+id/Bloodtpefilter"
        android:layout_width="254dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="157dp"
        android:layout_marginTop="243dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="157dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="23dp"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="244dp"
        android:textSize="20sp"
        android:text="@string/bloodtype" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="23dp"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="342dp"
        android:textSize="20sp"
        android:text="@string/citytxtusersignup" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="23dp"
        android:layout_marginLeft="23dp"
        android:layout_marginBottom="248dp"
        android:textSize="20sp"
        android:text="@string/areatxtusersignup" />

</RelativeLayout>